# Nox

./: .Claude.md  .continueignore  .cursorignore  .cursorrules  .env.example  .gitignore  .gitleaks-baseline.json  .gitleaks.toml  .public-denylist  CHANGES_JULY_2026.md  CMakeLists.txt  DOCUMENTATION_UPDATES_JULY_2026.md  EXECUTION_TEST_GUIDE.md  INDEX.md  PROJECT_NOX_STATUS_JULY2026.md  README.md  README_CURRENT.md  Rules  TEST_GUIDE.md  TEST_MAINTENANCE_GUIDE.md  TICKER_STRATEGY.md  TRAILING_STOP_MONITOR_README.md  WATCHLIST_RECOMMENDATIONS.md  analyst_agent  commit_report.sh  docker-compose.yml  download_data.py  mcpt_example  mcpt_test  nox_engine  refresh_cron.sh
.githooks/: pre-push
america_data_engine/: Dockerfile  alt_macro.py  contradiction_vector.py  generate_skeptic_report.py  insider_cluster.py  main.py  requirements.txt  scrapers.py
analyst/: Dockerfile  RegimeStateMachine.hpp  analyst_agent  main.cpp
backtest/: edgar_cn_lag_backtest.py
backtest-engine/: backtester  build.sh  csv_parser.hpp  is_results.csv  main.cpp  oos_results.csv  oos_test_output.txt  optimization_loop.sh  results.csv  trades.csv  walk_forward.sh
china_data_engine/: Dockerfile  edgar_cn_lag.py  main.py  requirements.txt  retry_utils.py  scrapers.py
data/: README.md  memory_bank.db  spy_vix_daily_CORRUPTED_DO_NOT_USE.csv  spy_vix_daily_v2.csv
data_engine/: Dockerfile  main.py  scrapers.py
docs/: DESIGN_THINKING.md  DOCUMENTATION_OVERVIEW.md  DOCUMENTATION_SUMMARY.txt  FUTURE_WORK.md  INDEX.md  NOX_COMPLETE_GUIDE.md  NOX_USER_GUIDE.md  PRIVATE_ROADMAP.md  Rules  (+1 more)
(+59 files in other folders)
